appendNumber is added

--- a/index.html
+++ b/index.html
@@ -15,33 +15,34 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <script src="./app.js" defer></script>
+
     <title>Calculator</title>
   </head>
   <body>
     <div class="calculator-grid">
       <div class="output">
-        <div class="previous-operand">123</div>
-        <div class="current-operand">456</div>
+        <div data-previous-operand class="previous-operand"></div>
+        <div data-current-operand class="current-operand"></div>
       </div>
-      <button class="span-two">C</button>
-      <button>←</button>
-      <button id="yellow">÷</button>
-      <button>1</button>
-      <button>2</button>
-      <button>3</button>
-      <button id="yellow">×</button>
-      <button>4</button>
-      <button>5</button>
-      <button>6</button>
-      <button id="yellow">+</button>
-      <button>7</button>
-      <button>8</button>
-      <button>9</button>
-      <button id="yellow">−</button>
-      <button>.</button>
-      <button>0</button>
-      <button class="span-two" id="yellow">=</button>
+      <button data-all-clear class="span-two">C</button>
+      <button data-delete>⟵</button>
+      <button data-operation id="yellow">÷</button>
+      <button data-number>1</button>
+      <button data-number>2</button>
+      <button data-number>3</button>
+      <button data-operation id="yellow">×</button>
+      <button data-number>4</button>
+      <button data-number>5</button>
+      <button data-number>6</button>
+      <button data-operation id="yellow">+</button>
+      <button data-number>7</button>
+      <button data-number>8</button>
+      <button data-number>9</button>
+      <button data-operation id="yellow">−</button>
+      <button data-number>.</button>
+      <button data-number>0</button>
+      <button data-equals class="span-two" id="yellow">=</button>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
